# wkiskas_messenger

./: .gitignore  auth.py  db.py  init_db.sql  main.py  pyproject.toml  schemas.py  ws_manager.py
docs/: README.md
frontend_web/: index.html  package-lock.json  package.json  svelte.config.js
frontend_web/src/: App.svelte  stores.js
frontend_web/src/lib/: Chat.svelte  Header.svelte  Login.svelte  UserList.svelte
